# unicode-screensaver

./: .travis.yml  Makefile.am  README  configure.ac  unicode-names.h  unicode.1  unicode.1.in  unicode.6x.in  unicode.c  unicode.desktop  unicode.desktop.in  unicode.xml  version.h
